--- a/css/index.css
+++ b/css/index.css
@@ -64,12 +64,14 @@ header {
 	background-image: url('../images/bg-hero-desktop.svg');
 	background-color: hsl(193, 100%, 96%);
 	padding: 80px;
+	padding-top: 40px;
 	margin-bottom: 30px;
 }
 
 header .header-nav {
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 }
 
 header .header-nav .header-logo-container {
@@ -93,31 +95,28 @@ header .header-nav .try-it-free {
 }
 
 header .header-section {
-	margin-top: 60px;
-	height: 400px;
 	display: flex;
 	flex-direction: row;
+	align-items: center;
+	margin-top: 60px;
 }
 
 header .header-section .content {
 	width: 50%;
-	padding-top: 30px;
 	padding-right: 50px;
 }
 
 header .header-section .content .bg-pink {
-	width: 200px;
+	max-width: 200px;
 	font-size: 14px;
 }
 
 header .header-section .illustration {
 	width: 50%;
-	height: inherit;
 }
 
 header .header-section .illustration img {
 	width: 100%;
-	height: 100%;
 }
 
 main {
@@ -281,7 +280,7 @@ footer .copyright {
 
 
 /* MEDIA QUERIES */
-@media (max-width: 850px){
+@media (max-width: 800px){
 	header {
 	    background-image: url('../images/bg-hero-mobile.svg');
 		background-repeat: no-repeat;
